# ai-newsletter-automation

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml
config/: sources.candidate.yaml  sources.reference.yaml  sources.social.yaml  sources.trending.yaml  sources.yaml
design_preview/: font_preview.html  sian_a_editorial.html  sian_b_magazine.html  sian_c_report.html
docs/: INSTALL.md  ROADMAP.md  SELECTION_MODES.md  WINDOWS_UIPATH_RUNBOOK.md
scripts/: bootstrap_windows.ps1  run_weekly.ps1  setup_windows.ps1
src/ai_newsletter/: benchmark.py  cli.py  collectors.py  config.py  editorial_selection.py  images.py  latest_selection.py  llm.py  models.py  ranking.py  render.py  sample_data.py  sections.py  topic_radar.py  usage.py
tests/: test_benchmark.py  test_latest_selection.py  test_ranking.py  test_sectioned_selection.py
