[project]
name = "ai-newsletter-automation"
version = "0.1.0"
description = "Weekly AI trend/news crawler and HTML newsletter packager"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "httpx>=0.27.0",
    "openai>=1.54.0",
    "pydantic>=2.10.0",
    "python-dateutil>=2.9.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "pytest>=8.0.0,<9.0.0",
]

[project.scripts]
ai-newsletter = "ai_newsletter.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_newsletter"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
